force-app/main/default/objects/User/fields/echosign_dev1__EchoSign_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates that the user&#39;s email address has been validated in Adobe Sign API.</description>
    <inlineHelpText>This checkbox indicates that the user&#39;s email address has been validated in Adobe Sign API.</inlineHelpText>
    <label>Adobe Sign Email Verified</label>
    <type>Checkbox</type>
</CustomField>