force-app/main/default/objects/User/fields/ERP_Sales_Person_Reference__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sales_Person_Reference__c</fullName>
    <label>ERP Sales Person Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>