force-app/main/default/objects/User/fields/KCS_Coach__c.field-meta.xml
<CustomField>
    <fullName>KCS_Coach__c</fullName>
    <description>KCS Coach is a self lookup field to select the user</description>
    <label>KCS Coach</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>