force-app/main/default/objects/User/fields/KCS_Role__c.field-meta.xml
<CustomField>
    <fullName>KCS_Role__c</fullName>
    <description>KCS role is a picklist field used to identify the role</description>
    <label>KCS Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>