force-app/main/default/objects/User/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>Provet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>