force-app/main/default/objects/User/fields/Stella_Brand__c.field-meta.xml
<CustomField>
    <fullName>Stella_Brand__c</fullName>
    <description>Formula based on Role Name to return user region. Used to pass over to Stella for template Brand designation</description>
    <formula>IF( CONTAINS(UserRole.Name, &quot;GSS NA&quot;), &quot;gssna&quot;,
IF( CONTAINS(UserRole.Name, &quot;GSS EMEA&quot;), &quot;gssuk&quot;,
IF( CONTAINS(UserRole.Name, &quot;GSS APAC&quot;), &quot;gssausnz&quot;,
&quot;N/A&quot;)))</formula>
    <label>Stella Brand</label>
    <type>Text</type>
</CustomField>