force-app/main/default/objects/User/fields/Stella_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Stella_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by a formula that validates the user is set up in Stella (customer survey tool)</description>
    <label>Stella Enabled</label>
    <type>Checkbox</type>
</CustomField>