force-app/main/default/objects/User/fields/TimeTrade_SF1__GTM_Password__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GTM_Password__c</fullName>
    <description>Stores the Go To Meeting Password for the user</description>
    <label>GTM Password</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>