force-app/main/default/objects/User/fields/TimeTrade_SF1__is_Pro_Business_JoinMe_User__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__is_Pro_Business_JoinMe_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>join.me is Pro Business User?</label>
    <type>Checkbox</type>
</CustomField>