force-app/main/default/objects/User/fields/TimeTrade_SF1__JoinMe_Tokens_Last_Renewal__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__JoinMe_Tokens_Last_Renewal__c</fullName>
    <label>join.me Token Last Renewal</label>
    <type>DateTime</type>
</CustomField>