force-app/main/default/objects/User/fields/TimeTrade_SF1__Sync_Salesforce_Calendar__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Sync_Salesforce_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to Sync the Salesforce Calendar of the particular User.</description>
    <label>Sync Salesforce Calendar?</label>
    <type>Checkbox</type>
</CustomField>