force-app/main/default/objects/User/fields/TimeTrade_SF1__WebEx_Password__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__WebEx_Password__c</fullName>
    <label>WebEx Password</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>