force-app/main/default/objects/User/fields/TimeTrade_SF1__Zoom_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Refresh_Token__c</fullName>
    <description>Do not put this field on any page layouts or alter the field&#39;s value.</description>
    <inlineHelpText>Do not put this field on any page layouts or alter the field&#39;s value.</inlineHelpText>
    <label>Zoom Refresh Token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>