force-app/main/default/objects/User/fields/TimeTrade_SF1__Zoom_Token_Last_Renewal__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Zoom_Token_Last_Renewal__c</fullName>
    <label>Zoom Token Last Renewal</label>
    <type>DateTime</type>
</CustomField>